# dhcrd

./: .gitignore  BUILD.bazel  Makefile  PROJECT  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: main.yml
cmd/manager/: .gitignore  BUILD.bazel  main.go
config/crds/: dhcp_v1alpha1_lease.yaml  dhcp_v1alpha1_range.yaml
config/default/: kustomization.yaml
config/manager/: manager.yaml
config/rbac/: rbac_role.yaml  rbac_role_binding.yaml
config/samples/: dhcp_v1alpha1_lease.yaml  dhcp_v1alpha1_range.yaml
examples/: BUILD.bazel  dhcp_example.go
gomod/: BUILD.bazel  tools.go
pkg/: BUILD.bazel
pkg/apis/: BUILD.bazel  addtoscheme_dhcp_v1alpha1.go  apis.go
pkg/apis/dhcp/: BUILD.bazel  group.go
pkg/apis/dhcp/v1alpha1/: BUILD.bazel  doc.go  lease_types.go  lease_types_test.go  range_types.go  range_types_test.go  register.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel
pkg/controller/dhcp/: BUILD.bazel  dhcp_controller.go
pkg/webhook/: BUILD.bazel
