load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "github.com/johnsonj/dhcrd/gomod",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_code_generator//cmd/deepcopy-gen:go_default_library",
        "@io_k8s_sigs_controller_tools//cmd/controller-gen:go_default_library",
    ],
)
