load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_image(
    name = "go_image",
    binary = "pkg",
    importpath = "github.com/johnsonj/dhcrd/pkg",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_push(
    name = "publish",
    format = "Docker",

    # Any of these components may have variables.
    registry = "gcr.io",
    repository = "dhcrd-dev/dhcrd",
    tag = "latest",
    image = "go_image",

    # Trigger stamping.
    stamp = True,
)
