load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/johnsonj/dhcrd/cmd/manager",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/dhcp:go_default_library",
        "//pkg/webhook:go_default_library",
        "@com_github_krolaw_dhcp4//:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/config:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/signals:go_default_library",
    ],
)

go_binary(
    name = "manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "manager_image",
    binary = "manager",
    importpath = "github.com/johnsonj/dhcrd/cmd/manager",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_push(
    name = "publish",
    format = "Docker",
    registry = "gcr.io",
    repository = "dhcrd-dev/dhcrd",
    tag = "latest",
    image = "manager_image",
    stamp = True,
)
