load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "addtoscheme_dhcp_v1alpha1.go",
        "apis.go",
    ],
    importpath = "github.com/johnsonj/dhcrd/pkg/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/dhcp/v1alpha1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ],
)
