load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dhcp_controller.go"],
    importpath = "github.com/johnsonj/dhcrd/pkg/controller/dhcp",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/dhcp/v1alpha1:go_default_library",
        "//vendor/github.com/krolaw/dhcp4:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
