load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["dhcp_controller.go"],
    importpath = "github.com/johnsonj/dhcrd/pkg/controller/dhcp",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/dhcp/v1alpha1:go_default_library",
        "@com_github_krolaw_dhcp4//:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
    ],
)
